# bandits

./: .gitignore  README.md  bandits.py  main.py  policies.py  pyproject.toml  requirements.txt
bandits/: bandits.py  datasets.py  envs.py  measures.py  runner.py  samplers.py  selectors.py  transition.py  utils.py
bandits/bandits/: __init__.py  bandit.py  exp3_bandit.py  lin_ucb.py  q_bandit.py  samplers.py
bandits/envs/: __init__.py  bernoulli_env.py  env.py  gaussian_env.py  movielens_env.py
configs/: lin_ucb.yml  simple_bernoulli.yml
src/: bandits.py
