[tool.poetry]
name = "bandits"
version = "0.1.0"
description = "Bandits Playground"
authors = ["David Cotton <davidcotton@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bandits"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
mlflow = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
