[tool.poetry]
name = "bandits"
version = "0.1.0"
description = "Bandits Playground"
authors = ["David Cotton <davidcotton@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bandits"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
mlflow = "^2.6.0"
torch = "^2.0.0"
tqdm = "^4.65.0"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
gym = "^0.26.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
